k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /validate
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  name: http
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  name: http
          - path: /rules
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  name: http
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  name: http
